--- a/packages/@remirror/playground/package.json
+++ b/packages/@remirror/playground/package.json
@@ -17,13 +17,12 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "import-remirror": "echo 'Be sure to run `pnpm build` in root first!' && ts-node -O '{\"module\":\"commonjs\"}' --transpile-only ./scripts/import-remirror.ts"
-  },
   "dependencies": {
     "@babel/runtime": "^7.11.0",
     "@babel/standalone": "^7.11.0",
     "@babel/types": "^7.11.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@remirror/core": "1.0.0-next.29",
     "@remirror/core-helpers": "1.0.0-next.28",
     "@remirror/pm": "1.0.0-next.28",
@@ -31,11 +30,16 @@
     "@types/babel__core": "^7.1.9",
     "@types/babel__standalone": "^7.1.2",
     "@types/lz-string": "^1.3.34",
+    "json.macro": "^1.3.0",
     "lz-string": "^1.4.4",
-    "monaco-editor": "^0.20.0",
-    "monaco-editor-webpack-plugin": "^1.9.0",
+    "monaco-editor": "npm:@typescript-deploys/monaco-editor@4.0.2",
+    "react-content-loader": "^5.1.0",
+    "react-error-boundary": "^2.3.1",
+    "react-frame-component": "^4.1.3",
     "regenerator-runtime": "^0.13.7",
-    "remirror": "1.0.0-next.30"
+    "remirror": "1.0.0-next.30",
+    "use-clipboard-copy": "^0.1.2",
+    "zustand": "^3.0.1"
   },
   "devDependencies": {
     "@types/prettier": "^2.1.0",
